# QWebInspectorTest

./: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  main.cpp
